fix overflow X in bar graph

--- a/src/Container/WeeklyGraphs/Graph.css
+++ b/src/Container/WeeklyGraphs/Graph.css
@@ -5,4 +5,6 @@
     justify-content: center;
 }
 
-
+.graph-wrapper {
+    overflow-x: scroll;
+}
